<resources>
    <string name="app_name">movies</string>

    <string name="title_label" translatable="false">Movie title</string>
    <string name="releaseDate_label" translatable="false">01.01.2018</string>
    <string name="vote_label" translatable="false">7.7</string>
    <string name="voteCount_label" translatable="false">1234</string>
    <string name="plot_label" translatable="false">This movie is about ...</string>

    <string name="reviewAuthor_label" translatable="false">Author</string>
    <string name="reviewContent_label" translatable="false">Review content</string>

    <string name="poster_ContentDescription">Movie poster</string>
    <string name="favorite_ContentDescription">favorite icon</string>
    <string name="action_settings">Settings</string>

    <string name="content_authority">com.example.android.movies</string>

    <string name="posterLoadSize" translatable="false">w154</string>

    <string name="pref_sort_order_default_value" translatable="true">popular</string>
    <string name="pref_sort_order_key" translatable="false">sort</string>
    <string name="pref_sort_order_label" translatable="true">Sort order</string>
    <string name="pref_sort_order_popular_label" translatable="true">most popular</string>
    <string name="pref_sort_order_rated_label" translatable="true">highest rated</string>
    <string name="pref_sort_order_favorites_label" translatable="true">favorites</string>

    <string name="pref_sort_order_popular_value" translatable="true">popular</string>
    <string name="pref_sort_order_rated_value" translatable="true">top_rated</string>
    <string name="pref_sort_order_favorites_value" translatable="true">favorites</string>




</resources>
